--- a/package.json
+++ b/package.json
@@ -1,41 +1,4 @@
-{
-  "name": "react-quiz-app",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "babel-core": "^6.21.0",
-    "babel-loader": "^6.2.10",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "express": "^4.14.0",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
-    "react-router": "^3.0.0",
-    "webpack": "^1.14.0",
-    "react-scripts": "5.0.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
-}
+{"homepage":"https://vishruth555.github.io/quiz","name":"react-quiz-app","version":"0.1.0","private":true,"dependencies":{"babel-core":"^6.21.0","babel-loader":"^6.2.10","babel-preset-es2015":"^6.18.0","babel-preset-react":"^6.16.0","express":"^4.14.0","gh-pages":"^6.0.0","react":"^15.4.1","react-dom":"^15.4.1","react-router":"^3.0.0","react-scripts":"5.0.1","webpack":"^1.14.0"},
+"scripts":{"predeploy": "npm run build",
+"deploy": "gh-pages -d build",
+"start":"react-scripts start","build":"react-scripts build","test":"react-scripts test","eject":"react-scripts eject"},"eslintConfig":{"extends":["react-app","react-app/jest"]},"browserslist":{"production":[">0.2%","not dead","not op_mini all"],"development":["last 1 chrome version","last 1 firefox version","last 1 safari version"]}}
